# sacv

./: .dependency-cruiser.json  .gitignore  AGENTS.md  DEBUGGING_NOTES.md  Dockerfile.sandbox  Makefile  REFACTORING_NOTES.md  docker-compose.yml  pyproject.toml  requirements.sandbox.txt
src/sacv/: cli.py  cli_progress.py  logging_config.py  tracing.py
tests/: conftest.py
tests/e2e/: test_brownfield_e2e.py  test_budget_exceeded.py  test_full_workflow.py
tests/integration/: test_actor_flow.py  test_critic_fan.py  test_full_graph_replan.py  test_hitl_escalation_node.py  test_intelligent_debugger.py  test_intelligent_debugger_cdp.py  test_intelligent_debugger_delta_debug.py  test_memory_consolidation_node.py  test_node_context_integration.py  test_preflight_node.py  test_replan.py  test_session_timeout.py  test_speculative_branch.py  test_two_phase_verifier.py
tests/unit/: test_actor_helpers.py  test_actor_node.py  test_actor_span_events.py  test_actor_untested_paths.py  test_all_critics_span_events.py  test_audit_helper.py  test_audit_trail.py  test_bootstrap_node.py  test_bootstrap_validation.py  test_branch_manager.py  test_branch_manager_edge_cases.py  test_branch_subgraph.py  test_cadence_reserved.py  test_cdp_client.py  test_cdp_parsers.py  test_check_profiles.py  test_check_router.py  test_claude_agent_adapter_helpers.py  test_cli_build_deps.py  test_cli_doctor.py  test_cli_graph.py  test_cli_parsing.py  test_cli_progress.py  test_cli_status.py  test_confidence_cost_penalty.py  test_confidence_score.py  test_confidence_weights.py  test_config_cadence.py  (+78 more)
(+64 files in other folders)
