[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sacv-workflow"
version = "0.1.0"
description = "Scout-Actor-Critic-Verifier coding workflow"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.0,<0.4.0",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0,<1.0",
    "pydantic>=2.9.0",
    "docker>=7.1.0",
    "gitpython>=3.1.0",
    "anyio>=4.6.0",
    "structlog>=24.0.0",         # structured logging
    "tenacity>=9.0.0",           # retry logic for adapters
    "playwright>=1.47.0",        # visual diff
    "websockets>=12.0",          # CDP debugger (cdp_client.py)
    "langgraph-checkpoint-sqlite>=2.0,<3.0",
]

[project.scripts]
sacv = "sacv.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure unit tests; no I/O",
    "integration: uses stub providers; no live APIs or Docker",
    "e2e: full graph execution via VCR cassettes",
]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = "misc"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
